# mcp-server-on-lambda

./: Dockerfile  Makefile  pyproject.toml  samconfig.toml  template.yaml
src/: requirements.txt
src/mcp_server_on_lambda/: api_app.py  app.py  auth.py  mcp_app.py
